# CS3091_fits_data

./: .gitignore  .replit  Assignment_2_John_Bae.ipynb  BAE_fits_data.py  DataSciTopics.ipynb  README.md  assignment_1.py  data_inspection.py  data_utils.py  dendrogram_clean_image.fits  main.py  main1.py  pyproject.toml  test.py  troy_assignment_two.py
